# Qt-QML

./: .gitignore  LICENSE  README.md
Infotainment01/: CMakeLists.txt  Infotainment01.qmlproject  README.md  SystemBar.cpp  SystemBar.h  TemperatureCtrl.cpp  TemperatureCtrl.h  qmlmodules
Infotainment01/content/: App.qml  BottomBar.qml  CMakeLists.txt  LeftScreen.qml  NavigationSearchBox.qml  RightScreen.qml  Screen01.ui.qml  TempComponent.qml  UserApp.qml  UserAppsConsole.qml
Infotainment01/imports/: CMakeLists.txt
Infotainment01/imports/Infotainment01/: CMakeLists.txt  Constants.qml  DirectoryFontLoader.qml  EventListModel.qml  qmldir
Infotainment01/imports/Infotainment01/designer/: plugin.metainfo
Infotainment01/src/: app_environment.h  import_qml_plugins.h  main.cpp
Map_01/: Map_01.pro  README.md  WindowHelper.cpp  WindowHelper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  map.qml
MusicPlayer/: AudioInfoBox.qml  CMakeLists.txt  MusicPlayer.qmlproject  PlaylistPanel.qml  README.md  SearchField.qml  SearchPanel.qml  main.qml  qmlmodules
MusicPlayer/assets/videos/: video_1.avi
MusicPlayer/content/: App.qml  Screen01.ui.qml
MusicPlayer/imports/: CMakeLists.txt
MusicPlayer/imports/MusicPlayer/: CMakeLists.txt  Constants.qml  EventListSimulator.qml  qmldir
MusicPlayer/imports/MusicPlayer/designer/: plugin.metainfo
MusicPlayer/src/: AudioInfo.cpp  AudioInfo.h  AudioSearchModel.cpp  AudioSearchModel.h  PlayerController.cpp  PlayerController.h  import_qml_plugins.h  main.cpp
QtQtml01/: CMakeLists.txt  Main.qml  README.md  main.cpp  someclass.cpp  someclass.h
